[package]
name = "nym-hidden-chat"
version = "0.1.0"
edition = "2021"

[dependencies]
nym-sdk = { git = "https://github.com/nymtech/nym.git", branch = "develop" }
tokio = { version = "1.28", features = ["full"] }
clap = { version = "4.3", features = ["derive"] }
base58 = "0.2.0"
ed25519-dalek = "1.0"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossterm = "0.26"
tui = "0.19"
blake3 = "1.4"
