
[package]
name = "nymcat"
version = "0.1.0"
edition = "2021"

[dependencies]
nym-sdk = { git = "https://github.com/nymtech/nym.git", branch = "develop" }
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
chrono = "0.4"
bytes = "1.4"
futures-util = "0.3"
tokio-util = { version = "0.7", features = ["codec"] }
tokio-stream = "0.1"
